objects/Customer_Enrichment__c.object
<CustomObject>
    <fields>
        <fullName>AK_Customer_Enrichment__c</fullName>
        <externalId>true</externalId>
        <label>AK Customer Enrichment</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <externalId>true</externalId>
        <label>Contact Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Identifier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Enrichments</relationshipLabel>
        <relationshipName>Customer_Enrichments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Identifier</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Enrichments</relationshipLabel>
        <relationshipName>Customer_Enrichments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer Enrichment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Customer Enrichment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Enrichments</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <label>Phone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>